add a fake component in cmake for the optimized subscription. This enables other libraries to require this component to force the user to install this version instead of the official version. This is done because by just changing the label cmake cannot distinguish if this version or the original is installed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1630,6 +1630,9 @@ if(UA_ENABLE_DISCOVERY_MULTICAST)
     list(APPEND open62541_enabled_components "DiscoveryMulticast")
 endif()
 
+# Append a component for Logicmelt optimization to work with big arrays in subscription
+list(APPEND open62541_enabled_components "LogicmeltOptimizedSubscription")
+
 # export library (either static or shared depending on BUILD_SHARED_LIBS)
 if(UA_PACK_DEBIAN)
     set(EXTRATARGETS "open62541-static")
